# yesod-subsite-template

./: .ghci  .gitignore  flake.nix  yesod-subsite.cabal
example/: Dev.hs  ExampleApp.hs
src/: SubApp.hs  SubData.hs
test/: SubAppSpec.hs  TestImport.hs
